; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/esp_ble_mesh/mesh_core/extr_cfg_srv.c_mod_sub_list_clear.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/esp_ble_mesh/mesh_core/extr_cfg_srv.c_mod_sub_list_clear.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bt_mesh_model = type { i64* }

@BLE_MESH_ADDR_UNASSIGNED = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.bt_mesh_model*)* @mod_sub_list_clear to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @mod_sub_list_clear(%struct.bt_mesh_model* %0) #0 {
  %2 = alloca %struct.bt_mesh_model*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  store %struct.bt_mesh_model* %0, %struct.bt_mesh_model** %2, align 8
  store i32 0, i32* %4, align 4
  store i64 0, i64* %3, align 8
  br label %5

5:                                                ; preds = %33, %1
  %6 = load i32, i32* %4, align 4
  %7 = load %struct.bt_mesh_model*, %struct.bt_mesh_model** %2, align 8
  %8 = getelementptr inbounds %struct.bt_mesh_model, %struct.bt_mesh_model* %7, i32 0, i32 0
  %9 = load i64*, i64** %8, align 8
  %10 = call i32 @ARRAY_SIZE(i64* %9)
  %11 = icmp slt i32 %6, %10
  br i1 %11, label %12, label %36

12:                                               ; preds = %5
  %13 = load %struct.bt_mesh_model*, %struct.bt_mesh_model** %2, align 8
  %14 = getelementptr inbounds %struct.bt_mesh_model, %struct.bt_mesh_model* %13, i32 0, i32 0
  %15 = load i64*, i64** %14, align 8
  %16 = load i32, i32* %4, align 4
  %17 = sext i32 %16 to i64
  %18 = getelementptr inbounds i64, i64* %15, i64 %17
  %19 = load i64, i64* %18, align 8
  %20 = load i64, i64* @BLE_MESH_ADDR_UNASSIGNED, align 8
  %21 = icmp ne i64 %19, %20
  br i1 %21, label %22, label %32

22:                                               ; preds = %12
  %23 = load i64, i64* @BLE_MESH_ADDR_UNASSIGNED, align 8
  %24 = load %struct.bt_mesh_model*, %struct.bt_mesh_model** %2, align 8
  %25 = getelementptr inbounds %struct.bt_mesh_model, %struct.bt_mesh_model* %24, i32 0, i32 0
  %26 = load i64*, i64** %25, align 8
  %27 = load i32, i32* %4, align 4
  %28 = sext i32 %27 to i64
  %29 = getelementptr inbounds i64, i64* %26, i64 %28
  store i64 %23, i64* %29, align 8
  %30 = load i64, i64* %3, align 8
  %31 = add i64 %30, 1
  store i64 %31, i64* %3, align 8
  br label %32

32:                                               ; preds = %22, %12
  br label %33

33:                                               ; preds = %32
  %34 = load i32, i32* %4, align 4
  %35 = add nsw i32 %34, 1
  store i32 %35, i32* %4, align 4
  br label %5

36:                                               ; preds = %5
  %37 = load i64, i64* %3, align 8
  ret i64 %37
}

declare dso_local i32 @ARRAY_SIZE(i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
